# sparql-annotator

./: .gitignore  INTEGRATION.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/: copilot-instructions.md
.kiro/steering/: instructions.md
sparql_annotator/: __init__.py  algebra.py  algebra_viz.py  annotator.py  antipatterns.py  classifier.py  cli.py  inspect_query.py  model.py  namespaces.py  ontology.py  reporter.py
sparql_annotator/adapters/: __init__.py  base.py  csv.py  json.py  ttl.py
tests/: test_algebra.py  test_antipatterns.py  test_basic.py  test_classifier.py  test_reporter.py  test_ttl_lsq.py
