[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparql-annotator"
version = "0.2.6"
description = "Annotate SPARQL queries extracting operator and structural features"
requires-python = ">=3.10,<4.0"
authors = [{ name = "UniVR-DH" }]
dependencies = [
    "rdflib>=6.0",
    "pyparsing>=3.0",
    "click>=8.0",
]

[project.optional-dependencies]
viz = ["graphviz>=0.20"]

[project.scripts]
sparql-annotator = "sparql_annotator.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["sparql_annotator*"]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
